# knowledgeai-rag

./: CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
app/config/: constants.py  settings.py
app/services/: qdrant_client.py  vector_store_manager.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/knowledgeai_rag_api/: main.py
backend/knowledgeai_rag_api/core/: settings.py
backend/knowledgeai_rag_api/services/: knowledge_bot_app.py  knowledge_bot_tools.py  llm_manager.py  qdrant_client.py  rag_pipeline.py  services_registry.py  vector_store_manager.py
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
frontend/src/app/bot/knowledge/: layout.tsx  loading.tsx  page.tsx
frontend/src/app/bot/knowledge/_components/: FileUploadSection.tsx  KnowledgeBotChatActionBar.tsx  KnowledgeChatBot.tsx
frontend/src/components/: BotLoadingScreen.tsx
frontend/src/services/: knowledgeBotService.ts
frontend/src/types/: knowledge-bot.ts
